# apitest

./: .gitignore  db.sqlite3  main.py  pyproject.toml  requirements.txt
api_v1/: __init__.py
api_v1/products/: crud.py  schemas.py  views.py
api_v1/users/: crud.py  schemas.py  views.py
core/models/: __init__.py  base.py  db_helper.py  product.py
tests/: conftest.py  test_products.py
